Aligned items into correct positions &style button
Positioned items into correct positions on the header
Styled button
Styled text size and weight, for all text inside header

--- a/style.css
+++ b/style.css
@@ -3,19 +3,57 @@ body{
     margin: 0;
     min-height: 100vh; 
 }
-
-.header{
-    min-height: 25vh; 
-    background-color: #1F2937;
-    padding: 10px 140px 0 ;
+a{
+    color: white;
+    text-decoration: none;
+    font-size: 18px; 
+}
+.button{
+    color: #eee;
+    background-color: #3882f6;
+    padding: 8px 25px; 
+    border-radius: 6px;
+    border: none;
+    font-size: 15px; 
+    font-weight: 800;
+    margin-top: 12px; 
 }
 
-.right-links{
-    border: solid red; 
+.header{
+    min-height: 60vh; 
+    background-color: #1F2937;
+    padding: 10px 250px 0 ;
+}
+
+.right-links{ 
     display: flex;
     gap: 12px; 
 }
 .top-container{ 
     display: flex;
     justify-content: space-between;  
+}
+
+.left-text{
+    margin-top: 120px; 
+    width: 400px; 
+    height: 200px;
+}
+
+.hero-main-title{ 
+    color: #f9faf8;
+    font-size: 38px;
+    font-weight: 900;
+}
+
+.hero-main-text, .logo{
+    color: #E5E7EB;
+}
+
+.hero-main-text{
+    font-size: 18px;
+}
+.logo{
+    font-weight: 900;
+    font-size: 30px; 
 }
